# anna

./: .gitignore  .gitmodules  README.md  makefile  meson.build  nix-shell.sh  perf-record.sh  perf-report.sh  run_at_fixed_frequency.sh
.github/workflows/: main.yml
benchmarks/: bench.cpp  conv1d.cpp  conv1d_2.cpp  conv1d_function.cpp  dot.cpp  linear.cpp  meson.build  middlecols.cpp  mul.cpp  mul_blitz.cpp  mul_eigen.cpp  mul_intrinsics.cpp  mul_raw.cpp  mul_raw_no_init.cpp  mul_row_vs_col.cpp  mul_vectorclass2.cpp  nam_wavenet.cpp  nam_wavenet.sync-conflict-20260202-134057-Z5QJNBW.cpp  non_nam_wavenet.cpp  op.cpp  process_conv1d.cpp
data/: test.nam
examples/: binary_sequence.cpp  conv1d.cpp  conv1d2by2.cpp  conv1d2by2_buffered.cpp  conv1d_buffered.cpp  inplace_sequence.cpp  input_output_sequence.cpp  iterated_sequence.cpp  meson.build  nam_wavenet.cpp  nam_wavenet.hpp  nam_wavenet.sync-conflict-20260205-122825-PYFEBSR.hpp  non_nam_wavenet.cpp  ringbuffer.cpp  seq.cpp  wavenet.cpp
include/anna/: anna.hpp  benchmark.hpp  conv1d.hpp  conv1d_double_buffer.hpp  log.hpp  magic.hpp  make_matrix_array.hpp  nam.hpp  nam_wavenet.hpp  next_multiple.hpp  op.hpp  seq.hpp  sequence.hpp  tanh.hpp  wavenet.hpp
julia/: Manifest.toml  conv1d.jl  conv1d.json
scratch/: conv1d.hpp  conv1d_fixed_buffersize.cpp  conv1d_function_flat_weights.cpp  conv1d_make_weights.hpp  fast_math.h  inplace_sequence.cpp  input_output_sequence.cpp  iterated_sequence.cpp  meson.build  mul_blitz.cpp  mul_blitz_tiny.cpp  mul_intrinsics.cpp  mul_raw.cpp  nam_wavenet.cpp  non_nam_wavenet.cpp  op.cpp  op.hpp  ringbuffer.hpp  sequence.hpp  tanh.hpp
scripts/: perf-report-stdio.sh
tests/: conv1d.cpp  magic_matrix.cpp  meson.build  next_multiple.cpp  op.cpp
