benchmark('op', executable('op', 'op.cpp', include_directories : includes, dependencies : [ benchmark_dep, eigen_dep ]), args : [ '--benchmark_time_unit=ms' ])
benchmark('linear', executable('linear', 'linear.cpp', include_directories : includes, dependencies : [ benchmark_dep, eigen_dep ]), args : [ '--benchmark_time_unit=ms' ])
benchmark('nam_wavenet', executable('nam_wavenet', 'nam_wavenet.cpp', include_directories : includes, dependencies : [ benchmark_dep, eigen_dep ]), args : [ '--benchmark_time_unit=ms' ])
