test('magic_matrix', executable('magic_matrix', 'magic_matrix.cpp', include_directories : includes, dependencies : [ gtest_dep, eigen_dep ]))
test('conv1d', executable('conv1d', 'conv1d.cpp', include_directories : includes, dependencies : [ gtest_dep, eigen_dep ]))
test('next_multiple', executable('next_multiple', 'next_multiple.cpp', include_directories : includes, dependencies : [ gtest_dep, eigen_dep ]))

